# Browse_test

./: .env.example  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: consumer.py  main.py  rabbitmq_utils.py
browse_test/: consumer.py  main.py  rabbitmq_utils.py
tests/: test_consumer.py  test_integration.py  test_main.py  test_rabbitmq.py
