[tool.poetry]
name = "browse-test"
version = "0.1.0"
description = ""
authors = ["Alexander <minkeviiich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"
pika = "^1.3.2"
selenium = "^4.26.1"
webdriver-manager = "^4.0.2"
httpx = "^0.27.2"
validators = "^0.34.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pylint = "^3.3.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
